# epic_mail_rust

./: .env  Cargo.toml  README.md
migrations/: 20230610045209_users-tables.sql
src/: app.rs  main.rs
src/model/: mod.rs  user.rs
src/response/: catchers.rs  mod.rs
src/routes/: mod.rs  users.rs
