[package]
name = "epic_mail_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros", "migrate", "uuid", "json" ]}
rocket = { version = "0.5.0-rc",  features =["json"]}
serde = {version ="1", features =["derive"]}
serde_json="1"
thiserror="1"
chrono= {version = "0.4", features = ["serde"]}
uuid= {version ="1", features = ["serde", "v4"]}
derive_more = "0.99"
dotenv = "0.15"
parking_lot = "0.12.1"
tokio = "1.8.0"
argon2 = "0.5.0"